--- a/tests/cpl_lndv2_splitphys.conf
+++ b/tests/cpl_lndv2_splitphys.conf
@@ -10,5 +10,5 @@
 # # CPLD tests                                                                                                                                                                      #
 # ###################################################################################################################################################################################
 
-COMPILE | APP=S2S SUITES=FV3_GFS_2017_coupled,FV3_GFS_2017_satmedmf_coupled,FV3_GFS_v15p2_coupled,FV3_GFS_v16_coupled             | - wcoss_cray jet.intel                  | fv3 |
-RUN     | cpld_lnd_12h                                                                                                            | - wcoss_cray jet.intel                  | fv3 |
+COMPILE | APP=S2S SUITES=FV3_GFS_v16_coupled_splitphys,FV3_GFS_2017_coupled,FV3_GFS_2017_coupled_splitphys             | - wcoss_cray jet.intel                  | fv3 |
+RUN     | cpld_lnd_splitphys                                                                                                      | - wcoss_cray jet.intel                  | fv3 |
