--- a/LM4-interface/CMakeLists.txt
+++ b/LM4-interface/CMakeLists.txt
@@ -21,6 +21,11 @@ set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} ${LM4_Extra_FORTRAN_FLAGS}")
 # Add preprocessor flag
 add_definitions(-DINTERNAL_FILE_NML)
 
+# Set MPI flags for C/C++/Fortran preprocessor
+if(MPI)
+  add_definitions(-DMPI)
+endif()
+
 # LM4 src files
 include("lm4_src_files.cmake")
 
