--- a/tests/parm/input_datm_lm4.nml.IN
+++ b/tests/parm/input_datm_lm4.nml.IN
@@ -4,7 +4,7 @@
 
 &diag_manager_nml
   prepend_date = .false.
-  max_output_fields = @[MAX_OUTPUT_FIELDS]
+  max_output_fields = 450
 /
 
 &fms_io_nml
