--- a/tests/fv3_conf/lm4_run.IN
+++ b/tests/fv3_conf/lm4_run.IN
@@ -36,9 +36,12 @@ fi
 # check if ATMRES or LNDRES is equal to C96:
 if [[ $ATMRES == 'C96' || $LNDRES == 'C96' ]]; then
   tar -xf @[INPUTDATA_LM4]/c96_grid/c96_OM4_025_grid_No_mg_drag_v20160808.tar -C ./INPUT/ \
-    --wildcards "C96_mosaic_tile?XC96_mosaic_tile?.nc"
+      --wildcards "C96_mosaic_tile?XC96_mosaic_tile?.nc"
 
   tar -xvf @[INPUTDATA_LM4]/c96_LM4/c96_topo_rough_land.nc.tar -C ./INPUT/
+
+  tar -xf @[INPUTDATA_LM4]/c96_LM4/c96_OM4_025_hydrography_v20170413.tar -C ./INPUT/ \
+      --wildcards "river_data.tile?.nc"
   
 elif [[ $ATMRES == 'C48' || $LNDRES == 'C48' ]]; then
   # Currently only on Gaea.
@@ -47,6 +50,9 @@ elif [[ $ATMRES == 'C48' || $LNDRES == 'C48' ]]; then
 
   # needed to compute topo_rough
   cp /lustre/f2/pdata/gfdl/fms/module_data/riga/navy_topography.data.nc INPUT/
+
+  # TODO: set up river data for c48
+  
 else
    echo 'Only setup for C48 or C96 for now during development'
 fi
